# Apple_stock

.github/workflows/: apple_stock_analysis.yml  jeevan.yml  python-publish.yml
avenuecode_apple_python-exercise_jeevanreddy-kommula/: apple_stock_analysis.yml  pyproject.toml  requirements.txt  setup.py
avenuecode_apple_python-exercise_jeevanreddy-kommula/Data/: filtered_apple_stock_data.csv  weekly_apple_stock_data.csv
avenuecode_apple_python-exercise_jeevanreddy-kommula/avenuecode_apple_python_exercise_jeevanreddy_kommula-0.0.1/avenuecode_apple_python_exercise_jeevanreddy_kommula-0.0.1.dist-info/: METADATA  RECORD
avenuecode_apple_python-exercise_jeevanreddy-kommula/avenuecode_apple_python_exercise_jeevanreddy_kommula.egg-info/: SOURCES.txt
