[project]
name = "avenuecode_apple_python_exercise_jeevanreddy_kommula"
version = "0.0.1"
authors = [
  { name="jeevan reddy", email="jeevanreddykommula99@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
